[package]
name = "org_schedule_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
log = "0.4.30"
regex = "1.12.3"
serde =  { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
simple_logger = "5.2.0"
walkdir = "2.5.0"
